Added competence delete passion

--- a/Mes expériences professionelles.html
+++ b/Mes expériences professionelles.html
@@ -10,20 +10,53 @@
 </head>
 
 <body>
-    <a href="Première page web.html"><h1>Accueil</h1></a>
+
+    <div id="header">
+        <div class="container">
+            <nav>
+                <img src="" class="logo">
+                <ul>
+                    <li><a href="Première page web.html">Accueil</a></li>
+                    <li><a href="Mes expériences professionelles.html">Expériences professionelles</a></li>
+                    <li><a href="Mes formations.html">Formations</a></li>
+                    <li><a href="competence.html">Compétences</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+
+        </div>
+    <div class="content">
+
     <h1>Mes expériences professionnelles</h1>
+
+    <section class="experience1">
 
     <h2>Opérateur de laboratoire</h2>
         <p> 
             Ecocem : Janvier 2023 - Juillet 2023
         </p>
 
+        <h3>Mission</h3><br>
+        <ul>
+            <li>Prélever et analyser des matières, produits intermédiaires et produits finis.</li>
+            <li>Réaliser des essais physiques sur Liants hydrauliques (gâchage de mortiers, résistance à la compression,
+                demande en eau, temps de début de prise, etc.).</li>
+            <li>Nettoyer et vérifier le bon fonctionnement du matériel utilisé.</li>
+            <li>Vérifier les étalonnages/dérives des appareils de mesure (granulomètres, appareils de Blaine...).</li>
+            <li>Broyer des échantillons et manipuler des charges de 10kg à 20kg.</li>
+            <li>Réaliser des seaux dits « échantillons », pour les clients et manipuler de manière répétitive des charges de 20 à 25 kg</li>
+        </ul>
+
+    </section>
+
+    <section class="experience2">
+
     <h2>Technicien de Laboratoire</h2>
         <P>
             Extrait Végétaux et dérivés (EVD) : Décembre 2022 - Janvier 2023
         </P>
 
-        <h3>Mission</h3>
+        <h3>Mission</h3><br>
             <ul> 
                 <li>Analyse des extraits secs</li>
                 <li>Analyse des insolubles</li>
@@ -34,12 +67,16 @@
                 <li>Mesure de pH</li>                      
             </ul>
 
+    </section>
+
+    <section class="experience3">
+
     <h2>Technicien chimiste en production</h2>
         <p>
             Labosud provence biologie : Aout 2021 - Novembre 2022
         </p>
 
-        <h3>Mission</h3>
+        <h3>Mission</h3><br>
             <ul> 
                 <li>Traitement pré-analytique des échantillons biologiques</li>
                 <li>Mise en œuvre des différentes techniques de méthodes séparatives chromatographiques (LC-FLUO/UV, LC-MSMS, ICP-MS, IRIS, GC-MS) 
@@ -55,12 +92,16 @@
                 <li>Encadrement et formation des stagiaires</li>     
             </ul>
 
+    </section>
+
+    <section class="experience4">
+
     <h2>Technicien en développement analytique</h2>
         <P>
          AR2I : Juillet - Juin 
         </P>
 
-        <h3>Mission</h3>
+        <h3>Mission</h3><br>
             <ul>
                 <li>Développement de méthodes analytiques</li>
                 <li>Validation des méthodes analytiques</li>
@@ -70,13 +111,15 @@
                 <li>Analyse ICP / Minéralisation / Karl-Fisher</li>
                 <li>Analyse UV-VIS / IR / Dissolution in vitro</li>
             </ul>
+    
+        <section class="experience5">
 
     <h2>Technicien contrôle qualité</h2>
         <p>
             Sealants Europe (PPG) : Décembre 2019 - Juin 2020
         </p>
 
-        <h3>Mission</h3>
+        <h3>Mission</h3><br>
             <ul> 
                 <li>Assurer le contrôle et l’acceptation des produits finis en cours de production et auconditionnement</li>
                 <li>Assurer le contrôle des matières premières</li>
@@ -87,6 +130,10 @@
                 <li>Proposer et participer aux améliorations en terme de qualité/sécurité/environnement/coût</li>
                 <li>S’assurer de la bonne utilisation, du rangement et de la propreté du matériel et des locaux.</li>  
             </ul>
+
+        </section>
+        
+        </div>
 </body>
 
 </html>
