--- a/Mes formations.html
+++ b/Mes formations.html
@@ -10,11 +10,25 @@
 </head>
 
 <body>
-    <a href="Première page web.html"><h1>Accueil</h1></a>
-    <h1>Mes Formations</h1>
+    <div id="header">
+        <div class="container">
+            <nav>
+                <img src="" class="logo">
+                <ul>
+                    <li><a href="Première page web.html">Accueil</a></li>
+                    <li><a href="Mes expériences professionelles.html">Expériences professionelles</a></li>
+                    <li><a href="Mes formations.html">Formations</a></li>
+                    <li><a href="competence.html">Compétences</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
 
-        <h2>CESI</h2>
-            <h3>Aix-en-Provence Septembre 2023 - Septembre 2024</h3>
+        </div>
+
+    <h1>Mes Formations</h1><br>
+
+        <h2>CESI</h2><br>
+            <h3>Aix-en-Provence Septembre 2023 - Septembre 2024</h3><br>
 
             <p>Statue étudiant - en recherche d'alternance</p>
 
@@ -34,28 +48,28 @@
             </p>
             
 
-        <h2>OpenClassrooms</h2>
+        <h2>OpenClassrooms</h2><br>
 
             <p>Certification "Base du language python" - Obtenu</p>
             <p>Certification "Site web avec HTML5 et CSS3 - en cours</p>
 
-        <h2>Vivre du code</h2>
+        <h2>Vivre du code</h2><br>
 
             <p>Formation en ligne  Novembre 2022 - aujourd'hui</p>
 
-        <h2>License Professionelle de Chimie analytique</h2>
+        <h2>License Professionelle de Chimie analytique</h2><br>
 
             <h3>Orsay Université Paris saclay Septembre 2017 - Septembre 2018</h3>
 
             <p>Alternant au sein du L.E.TI.A.M</p>
 
-        <h2>DUT de Chimie</h2>
+        <h2>DUT de Chimie</h2><br>
 
             <h3>Orsay Université Paris saclay Septembre 2015 - Septembre 2017</h3>
 
             <p>Alternant au sein d'Eurofins</p>
 
-    <h1>Langues</h1>
+    <h1>Langues</h1><br>
 
         <p>Anglais technique et scientifique</p>
 
